# mqtt-fastapi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
migrations/models/: 0_20230610093241_init.py  1_20230614074344_update.py
mosquitto/config/: mosquitto.conf
src/: main.py
src/api/: health_check.py  messages.py
src/database/: Dockerfile  create.sql  db.py
src/database/services/: message_service.py
src/models/: message.py  tortoise.py
src/mqtt_fastapi/: config.py
src/services/: mqtt_service.py
src/util/: deserialize.py  task_manager.py
tests/: conftest.py
tests/integration/: test_health_check.py  test_messages.py
tests/unit/: test_deserialize.py  test_message_model.py  test_task_manager.py
